// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`group notes by abc, sort by title, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: -",
  "-7",
  "GROUP: .",
  ".9",
  "GROUP: /",
  "/A",
  "GROUP: 0",
  "0O",
  "GROUP: 1",
  "1N",
  "GROUP: 2",
  "2M",
  "GROUP: 3",
  "3L",
  "GROUP: 4",
  "4K",
  "GROUP: 5",
  "5J",
  "GROUP: 6",
  "6I",
  "6undefined",
  "GROUP: 7",
  "7-",
  "7H",
  "GROUP: 8",
  "8=",
  "8G",
  "GROUP: 9",
  "9.",
  "9Q",
  "GROUP: =",
  "=8",
  "GROUP: A",
  "A/",
  "AP",
  "GROUP: B",
  "BO",
  "BZ",
  "GROUP: C",
  "CN",
  "CY",
  "GROUP: D",
  "DM",
  "DX",
  "GROUP: E",
  "EW",
  "EW",
  "GROUP: F",
  "FV",
  "FV",
  "GROUP: G",
  "G8",
  "GU",
  "GU",
  "GROUP: H",
  "H7",
  "HT",
  "HT",
  "GROUP: I",
  "I6",
  "IS",
  "IS",
  "GROUP: J",
  "J5",
  "JR",
  "JR",
  "GROUP: K",
  "K4",
  "KQ",
  "KQ",
  "GROUP: L",
  "L3",
  "LP",
  "LP",
  "GROUP: M",
  "M2",
  "MD",
  "MO",
  "MO",
  "GROUP: N",
  "N1",
  "NC",
  "NN",
  "NN",
  "GROUP: O",
  "O0",
  "OB",
  "OM",
  "OM",
  "GROUP: P",
  "PA",
  "PL",
  "PL",
  "PS",
  "GROUP: Q",
  "Q9",
  "QK",
  "QK",
  "QR",
  "GROUP: R",
  "RJ",
  "RJ",
  "RQ",
  "GROUP: S",
  "SI",
  "SI",
  "SP",
  "GROUP: T",
  "TH",
  "TH",
  "GROUP: U",
  "UG",
  "UG",
  "GROUP: V",
  "VF",
  "VF",
  "GROUP: W",
  "WE",
  "WE",
  "GROUP: X",
  "XD",
  "GROUP: Y",
  "YC",
  "GROUP: Z",
  "ZB",
]
`;

exports[`group notes by abc, sort by title, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: Z",
  "ZB",
  "GROUP: Y",
  "YC",
  "GROUP: X",
  "XD",
  "GROUP: W",
  "WE",
  "WE",
  "GROUP: V",
  "VF",
  "VF",
  "GROUP: U",
  "UG",
  "UG",
  "GROUP: T",
  "TH",
  "TH",
  "GROUP: S",
  "SP",
  "SI",
  "SI",
  "GROUP: R",
  "RQ",
  "RJ",
  "RJ",
  "GROUP: Q",
  "QR",
  "QK",
  "QK",
  "Q9",
  "GROUP: P",
  "PS",
  "PL",
  "PL",
  "PA",
  "GROUP: O",
  "OM",
  "OM",
  "OB",
  "O0",
  "GROUP: N",
  "NN",
  "NN",
  "NC",
  "N1",
  "GROUP: M",
  "MO",
  "MO",
  "MD",
  "M2",
  "GROUP: L",
  "LP",
  "LP",
  "L3",
  "GROUP: K",
  "KQ",
  "KQ",
  "K4",
  "GROUP: J",
  "JR",
  "JR",
  "J5",
  "GROUP: I",
  "IS",
  "IS",
  "I6",
  "GROUP: H",
  "HT",
  "HT",
  "H7",
  "GROUP: G",
  "GU",
  "GU",
  "G8",
  "GROUP: F",
  "FV",
  "FV",
  "GROUP: E",
  "EW",
  "EW",
  "GROUP: D",
  "DX",
  "DM",
  "GROUP: C",
  "CY",
  "CN",
  "GROUP: B",
  "BZ",
  "BO",
  "GROUP: A",
  "AP",
  "A/",
  "GROUP: =",
  "=8",
  "GROUP: 9",
  "9Q",
  "9.",
  "GROUP: 8",
  "8G",
  "8=",
  "GROUP: 7",
  "7H",
  "7-",
  "GROUP: 6",
  "6undefined",
  "6I",
  "GROUP: 5",
  "5J",
  "GROUP: 4",
  "4K",
  "GROUP: 3",
  "3L",
  "GROUP: 2",
  "2M",
  "GROUP: 1",
  "1N",
  "GROUP: 0",
  "0O",
  "GROUP: /",
  "/A",
  "GROUP: .",
  ".9",
  "GROUP: -",
  "-7",
]
`;

exports[`group notes by default, sort by dateCreated, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: Older",
  "Note in Older - 27",
  "Note in Older - 26",
  "Note in Older - 25",
  "Note in Older - 24",
  "Note in Older - 23",
  "Note in Older - 22",
  "Note in Older - 21",
  "Note in Older - 20",
  "Note in Older - 19",
  "Note in Older - 18",
  "Note in Older - 17",
  "Note in Older - 16",
  "Note in Older - 15",
  "Note in Older - 14",
  "GROUP: Last week",
  "Note in Last week - 13",
  "Note in Last week - 12",
  "Note in Last week - 11",
  "Note in Last week - 10",
  "Note in Last week - 9",
  "Note in Last week - 8",
  "Note in Last week - 7",
  "GROUP: Recent",
  "Note in Recent - 6",
  "Note in Recent - 5",
  "Note in Recent - 4",
  "Note in Recent - 3",
  "Note in Recent - 2",
  "Note in Recent - 1",
  "Note in Recent - 0",
]
`;

exports[`group notes by default, sort by dateCreated, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: Recent",
  "Note in Recent - 0",
  "Note in Recent - 1",
  "Note in Recent - 2",
  "Note in Recent - 3",
  "Note in Recent - 4",
  "Note in Recent - 5",
  "Note in Recent - 6",
  "GROUP: Last week",
  "Note in Last week - 7",
  "Note in Last week - 8",
  "Note in Last week - 9",
  "Note in Last week - 10",
  "Note in Last week - 11",
  "Note in Last week - 12",
  "Note in Last week - 13",
  "GROUP: Older",
  "Note in Older - 14",
  "Note in Older - 15",
  "Note in Older - 16",
  "Note in Older - 17",
  "Note in Older - 18",
  "Note in Older - 19",
  "Note in Older - 20",
  "Note in Older - 21",
  "Note in Older - 22",
  "Note in Older - 23",
  "Note in Older - 24",
  "Note in Older - 25",
  "Note in Older - 26",
  "Note in Older - 27",
]
`;

exports[`group notes by default, sort by dateEdited, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: Older",
  "Note in Older - 27",
  "Note in Older - 26",
  "Note in Older - 25",
  "Note in Older - 24",
  "Note in Older - 23",
  "Note in Older - 22",
  "Note in Older - 21",
  "Note in Older - 20",
  "Note in Older - 19",
  "Note in Older - 18",
  "Note in Older - 17",
  "Note in Older - 16",
  "Note in Older - 15",
  "Note in Older - 14",
  "GROUP: Last week",
  "Note in Last week - 13",
  "Note in Last week - 12",
  "Note in Last week - 11",
  "Note in Last week - 10",
  "Note in Last week - 9",
  "Note in Last week - 8",
  "Note in Last week - 7",
  "GROUP: Recent",
  "Note in Recent - 6",
  "Note in Recent - 5",
  "Note in Recent - 4",
  "Note in Recent - 3",
  "Note in Recent - 2",
  "Note in Recent - 1",
  "Note in Recent - 0",
]
`;

exports[`group notes by default, sort by dateEdited, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: Recent",
  "Note in Recent - 0",
  "Note in Recent - 1",
  "Note in Recent - 2",
  "Note in Recent - 3",
  "Note in Recent - 4",
  "Note in Recent - 5",
  "Note in Recent - 6",
  "GROUP: Last week",
  "Note in Last week - 7",
  "Note in Last week - 8",
  "Note in Last week - 9",
  "Note in Last week - 10",
  "Note in Last week - 11",
  "Note in Last week - 12",
  "Note in Last week - 13",
  "GROUP: Older",
  "Note in Older - 14",
  "Note in Older - 15",
  "Note in Older - 16",
  "Note in Older - 17",
  "Note in Older - 18",
  "Note in Older - 19",
  "Note in Older - 20",
  "Note in Older - 21",
  "Note in Older - 22",
  "Note in Older - 23",
  "Note in Older - 24",
  "Note in Older - 25",
  "Note in Older - 26",
  "Note in Older - 27",
]
`;

exports[`group notes by month, sort by dateCreated, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: April 2024",
  "Note in 3 - 1",
  "GROUP: June 2024",
  "Note in 5 - 3",
  "GROUP: July 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: September 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: October 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: November 2024",
  "Note in 10 - 8",
  "GROUP: December 2024",
  "Note in 11 - 9",
  "GROUP: January 2025",
  "Note in 0 - 10",
  "GROUP: February 2025",
  "Note in 1 - 11",
]
`;

exports[`group notes by month, sort by dateCreated, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: February 2025",
  "Note in 1 - 11",
  "GROUP: January 2025",
  "Note in 0 - 10",
  "GROUP: December 2024",
  "Note in 11 - 9",
  "GROUP: November 2024",
  "Note in 10 - 8",
  "GROUP: October 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: September 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: July 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: June 2024",
  "Note in 5 - 3",
  "GROUP: April 2024",
  "Note in 3 - 1",
]
`;

exports[`group notes by month, sort by dateEdited, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: April 2024",
  "Note in 3 - 1",
  "GROUP: June 2024",
  "Note in 5 - 3",
  "GROUP: July 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: September 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: October 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: November 2024",
  "Note in 10 - 8",
  "GROUP: December 2024",
  "Note in 11 - 9",
  "GROUP: January 2025",
  "Note in 0 - 10",
  "GROUP: February 2025",
  "Note in 1 - 11",
]
`;

exports[`group notes by month, sort by dateEdited, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: February 2025",
  "Note in 1 - 11",
  "GROUP: January 2025",
  "Note in 0 - 10",
  "GROUP: December 2024",
  "Note in 11 - 9",
  "GROUP: November 2024",
  "Note in 10 - 8",
  "GROUP: October 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: September 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: July 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: June 2024",
  "Note in 5 - 3",
  "GROUP: April 2024",
  "Note in 3 - 1",
]
`;

exports[`group notes by none, sort by dateCreated, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: All",
  "Note in 3 - 1",
  "Note in 5 - 3",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "Note in 10 - 8",
  "Note in 11 - 9",
  "Note in 0 - 10",
  "Note in 1 - 11",
]
`;

exports[`group notes by none, sort by dateCreated, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: All",
  "Note in 1 - 11",
  "Note in 0 - 10",
  "Note in 11 - 9",
  "Note in 10 - 8",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "Note in 5 - 3",
  "Note in 3 - 1",
]
`;

exports[`group notes by none, sort by dateEdited, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: All",
  "Note in 3 - 1",
  "Note in 5 - 3",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "Note in 10 - 8",
  "Note in 11 - 9",
  "Note in 0 - 10",
  "Note in 1 - 11",
]
`;

exports[`group notes by none, sort by dateEdited, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: All",
  "Note in 1 - 11",
  "Note in 0 - 10",
  "Note in 11 - 9",
  "Note in 10 - 8",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "Note in 5 - 3",
  "Note in 3 - 1",
]
`;

exports[`group notes by none, sort by title, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: All",
  "-7",
  ".9",
  "/A",
  "0O",
  "1N",
  "2M",
  "3L",
  "4K",
  "5J",
  "6I",
  "6undefined",
  "7-",
  "7H",
  "8=",
  "8G",
  "9.",
  "9Q",
  "=8",
  "A/",
  "AP",
  "BO",
  "BZ",
  "CN",
  "CY",
  "DM",
  "DX",
  "EW",
  "EW",
  "FV",
  "FV",
  "G8",
  "GU",
  "GU",
  "H7",
  "HT",
  "HT",
  "I6",
  "IS",
  "IS",
  "J5",
  "JR",
  "JR",
  "K4",
  "KQ",
  "KQ",
  "L3",
  "LP",
  "LP",
  "M2",
  "MD",
  "MO",
  "MO",
  "N1",
  "NC",
  "NN",
  "NN",
  "O0",
  "OB",
  "OM",
  "OM",
  "PA",
  "PL",
  "PL",
  "PS",
  "Q9",
  "QK",
  "QK",
  "QR",
  "RJ",
  "RJ",
  "RQ",
  "SI",
  "SI",
  "SP",
  "TH",
  "TH",
  "UG",
  "UG",
  "VF",
  "VF",
  "WE",
  "WE",
  "XD",
  "YC",
  "ZB",
]
`;

exports[`group notes by none, sort by title, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: All",
  "ZB",
  "YC",
  "XD",
  "WE",
  "WE",
  "VF",
  "VF",
  "UG",
  "UG",
  "TH",
  "TH",
  "SP",
  "SI",
  "SI",
  "RQ",
  "RJ",
  "RJ",
  "QR",
  "QK",
  "QK",
  "Q9",
  "PS",
  "PL",
  "PL",
  "PA",
  "OM",
  "OM",
  "OB",
  "O0",
  "NN",
  "NN",
  "NC",
  "N1",
  "MO",
  "MO",
  "MD",
  "M2",
  "LP",
  "LP",
  "L3",
  "KQ",
  "KQ",
  "K4",
  "JR",
  "JR",
  "J5",
  "IS",
  "IS",
  "I6",
  "HT",
  "HT",
  "H7",
  "GU",
  "GU",
  "G8",
  "FV",
  "FV",
  "EW",
  "EW",
  "DX",
  "DM",
  "CY",
  "CN",
  "BZ",
  "BO",
  "AP",
  "A/",
  "=8",
  "9Q",
  "9.",
  "8G",
  "8=",
  "7H",
  "7-",
  "6undefined",
  "6I",
  "5J",
  "4K",
  "3L",
  "2M",
  "1N",
  "0O",
  "/A",
  ".9",
  "-7",
]
`;

exports[`group notes by week, sort by dateCreated, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 22 - 28 Apr, 2024",
  "Note in 3 - 1",
  "GROUP: 24 - 30 Jun, 2024",
  "Note in 5 - 3",
  "GROUP: 22 - 28 Jul, 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: 23 - 29 Sep, 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: 21 - 27 Oct, 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: 25 Nov - 1 Dec, 2024",
  "Note in 10 - 8",
  "GROUP: 23 - 29 Dec, 2024",
  "Note in 11 - 9",
  "GROUP: 20 - 26 Jan, 2025",
  "Note in 0 - 10",
  "GROUP: 24 Feb - 2 Mar, 2025",
  "Note in 1 - 11",
]
`;

exports[`group notes by week, sort by dateCreated, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 24 Feb - 2 Mar, 2025",
  "Note in 1 - 11",
  "GROUP: 20 - 26 Jan, 2025",
  "Note in 0 - 10",
  "GROUP: 23 - 29 Dec, 2024",
  "Note in 11 - 9",
  "GROUP: 25 Nov - 1 Dec, 2024",
  "Note in 10 - 8",
  "GROUP: 21 - 27 Oct, 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: 23 - 29 Sep, 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: 22 - 28 Jul, 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: 24 - 30 Jun, 2024",
  "Note in 5 - 3",
  "GROUP: 22 - 28 Apr, 2024",
  "Note in 3 - 1",
]
`;

exports[`group notes by week, sort by dateEdited, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 22 - 28 Apr, 2024",
  "Note in 3 - 1",
  "GROUP: 24 - 30 Jun, 2024",
  "Note in 5 - 3",
  "GROUP: 22 - 28 Jul, 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: 23 - 29 Sep, 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: 21 - 27 Oct, 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: 25 Nov - 1 Dec, 2024",
  "Note in 10 - 8",
  "GROUP: 23 - 29 Dec, 2024",
  "Note in 11 - 9",
  "GROUP: 20 - 26 Jan, 2025",
  "Note in 0 - 10",
  "GROUP: 24 Feb - 2 Mar, 2025",
  "Note in 1 - 11",
]
`;

exports[`group notes by week, sort by dateEdited, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 24 Feb - 2 Mar, 2025",
  "Note in 1 - 11",
  "GROUP: 20 - 26 Jan, 2025",
  "Note in 0 - 10",
  "GROUP: 23 - 29 Dec, 2024",
  "Note in 11 - 9",
  "GROUP: 25 Nov - 1 Dec, 2024",
  "Note in 10 - 8",
  "GROUP: 21 - 27 Oct, 2024",
  "Note in 9 - 7",
  "Note in 9 - 7",
  "GROUP: 23 - 29 Sep, 2024",
  "Note in 8 - 6",
  "Note in 8 - 6",
  "GROUP: 22 - 28 Jul, 2024",
  "Note in 6 - 4",
  "Note in 6 - 4",
  "GROUP: 24 - 30 Jun, 2024",
  "Note in 5 - 3",
  "GROUP: 22 - 28 Apr, 2024",
  "Note in 3 - 1",
]
`;

exports[`group notes by year, sort by dateCreated, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 2025",
  "Note in 2025 - 1",
  "GROUP: 2027",
  "Note in 2027 - 3",
  "GROUP: 2028",
  "Note in 2028 - 4",
  "Note in 2028 - 4",
  "GROUP: 2030",
  "Note in 2030 - 6",
  "Note in 2030 - 6",
  "GROUP: 2031",
  "Note in 2031 - 7",
  "Note in 2031 - 7",
  "GROUP: 2032",
  "Note in 2032 - 8",
  "GROUP: 2033",
  "Note in 2033 - 9",
  "GROUP: 2034",
  "Note in 2034 - 10",
  "GROUP: 2035",
  "Note in 2035 - 11",
]
`;

exports[`group notes by year, sort by dateCreated, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 2035",
  "Note in 2035 - 11",
  "GROUP: 2034",
  "Note in 2034 - 10",
  "GROUP: 2033",
  "Note in 2033 - 9",
  "GROUP: 2032",
  "Note in 2032 - 8",
  "GROUP: 2031",
  "Note in 2031 - 7",
  "Note in 2031 - 7",
  "GROUP: 2030",
  "Note in 2030 - 6",
  "Note in 2030 - 6",
  "GROUP: 2028",
  "Note in 2028 - 4",
  "Note in 2028 - 4",
  "GROUP: 2027",
  "Note in 2027 - 3",
  "GROUP: 2025",
  "Note in 2025 - 1",
]
`;

exports[`group notes by year, sort by dateEdited, direction asc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 2025",
  "Note in 2025 - 1",
  "GROUP: 2027",
  "Note in 2027 - 3",
  "GROUP: 2028",
  "Note in 2028 - 4",
  "Note in 2028 - 4",
  "GROUP: 2030",
  "Note in 2030 - 6",
  "Note in 2030 - 6",
  "GROUP: 2031",
  "Note in 2031 - 7",
  "Note in 2031 - 7",
  "GROUP: 2032",
  "Note in 2032 - 8",
  "GROUP: 2033",
  "Note in 2033 - 9",
  "GROUP: 2034",
  "Note in 2034 - 10",
  "GROUP: 2035",
  "Note in 2035 - 11",
]
`;

exports[`group notes by year, sort by dateEdited, direction desc 1`] = `
[
  "GROUP: Conflicted",
  "Conflicted",
  "GROUP: Pinned",
  "Pinned note",
  "GROUP: 2035",
  "Note in 2035 - 11",
  "GROUP: 2034",
  "Note in 2034 - 10",
  "GROUP: 2033",
  "Note in 2033 - 9",
  "GROUP: 2032",
  "Note in 2032 - 8",
  "GROUP: 2031",
  "Note in 2031 - 7",
  "Note in 2031 - 7",
  "GROUP: 2030",
  "Note in 2030 - 6",
  "Note in 2030 - 6",
  "GROUP: 2028",
  "Note in 2028 - 4",
  "Note in 2028 - 4",
  "GROUP: 2027",
  "Note in 2027 - 3",
  "GROUP: 2025",
  "Note in 2025 - 1",
]
`;
